remove columns not defined in schema from queries
